package com.api.serviceCounter.deskQueue;

public enum QueueCode {
    NORMAL,
    PRIORITY,
    RETURN
}