package com.api.serviceCounter.session;

public enum SessionStatus {
    CALLED,
    IN_SERVICE,
    DONE,
    NO_SHOW
}