package com.api.serviceCounter.ticket;

public enum TicketStatus {
    WAITING,
    CALLED,
    IN_SERVICE,
    DONE,
    CANCELED,
    EXPIRED
}